# IVALib

./: CMakeLists.txt  README.md
cmake/: IVAFindLibs.cmake  IVAFindLibs.cmake~  IVALibModules.cmake  IVALibModules.cmake~  IVALibUtils.cmake  IVALibUtils.cmake~
examples/cpp/: ActiveContour.cpp  ActiveContour.cpp~  ActiveSurface.cpp  ActiveSurface.cpp~  CMakeLists.txt  CMakeLists.txt~  CameraMotion.cpp  CameraSurface.cpp  CameraSurface.cpp~  Plotter.cpp  Plotter.cpp~  Reconstruction.cpp  Reconstruction.cpp~
include/: CMakeLists.txt  CMakeLists.txt~  ivalib.hpp  ivalib.hpp~
include/IVALib/: ivalib.hpp  ivalib.hpp~
modules/: CMakeLists.txt  svn-commit.tmp
modules/ActiveSurfaces/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  svn-commit.tmp
modules/ActiveSurfaces/.ActiveSurfaces/: CMakeLists.txt  Makefile  cmake_install.cmake
modules/ActiveSurfaces/include/IVALib/ActiveSurfaces/: Bhattacharyya.hpp  ChanVese.hpp  Kappa.hpp  Kappa3D.hpp  Kappa3D.hpp~  Reconstruct3d.hpp  Reconstruct3d.hpp~  SFM.hpp  SFM3D.hpp  SFM_point.hpp  functor.hpp
modules/ActiveSurfaces/src/: Bhattacharyya.cpp  ChanVese.cpp  Kappa.cpp  Kappa3D.cpp  Kappa3D.cpp~  Reconstruct3d.cpp  Reconstruct3d.cpp~  SFM.cpp  SFM3D.cpp  SFM3D.cpp~  SFM_point.cpp  functor.cpp
modules/Plotter/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
modules/Plotter/include/IVALib/Plotter/: PlotterWindow.hpp  SurfaceWindow.hpp  SurfaceWindow.hpp~
modules/Plotter/src/: PlotterWindow.cpp  SurfaceWindow.cpp  SurfaceWindow.cpp~
modules/ThreeD/: CMakeLists.txt
modules/ThreeD/include/IVALib/ThreeD/: Camera.hpp  Camera.hpp~  Object3D.hpp  Object3D.hpp~  ProjPlane.hpp  ProjPlane.hpp~
modules/ThreeD/src/: Camera.cpp  Camera.cpp~  Object3D.cpp  Object3D.cpp~
modules/Utils/: CMakeLists.txt  CMakeLists.txt~
modules/Utils/include/IVALib/Utils/: Utils.hpp  Utils.hpp~
